trying to optimize. fixed fade in animation for unread notification